app/test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy
  labels:
    run: threetrees-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: threetrees-test
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: threetrees-test
    spec:
      containers:
        - name: threetrees-container
          image: ghcr.io/3bases/3trees:0.5.0-beta.9
          ports:
            - containerPort: 1234
          resources:
            limits:
              memory: 2Gi
              cpu: '1'
            requests:
              memory: 1Gi
              cpu: '1'
