app/threetrees-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threetrees-deploy
  labels:
    run: threetrees
spec:
  replicas: 10
  selector:
    matchLabels:
      app: threetrees
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: threetrees
    spec:
      containers:
        - name: threetrees-container
          image: ghcr.io/3bases/3trees:0.2.2
          ports:
            - containerPort: 1234
          resources:
            limits:
              memory: 2Gi
              cpu: '1'
            requests:
              memory: 1Gi
              cpu: '1'
