app/threetrees-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threetrees-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: threetrees-service
  template:
    metadata:
      labels:
        app: threetrees-service
    spec:
      containers:
      - name: threetrees-container
        image: ghcr.io/3bases/3trees:0.1.2
        ports:
        - containerPort: 1234
        resources:
          limits:
            memory: 2Gi
            cpu: '1'
          requests:
            memory: 1Gi
            cpu: '1'
