app/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: hdgen
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis-app

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-state
spec:
  serviceName: redis
  selector:
    matchLabels:
      app: redis-app
  template:
    metadata:
      labels:
        app: redis-app
  containers:
    - name: redis-container
      image: redis:7.0.0
      command:
        - redis-server
        - '/redis-config/redis.conf'
      ports:
        - containerPort: 6379
      resources:
        limits:
          memory: 6Gi
          cpu: 2
        requests:
          memory: 6Gi
          cpu: 2
        volumeMounts:
          - name: redis-pv
            mountPath: /data
          - name: redis-config
            mountPath: /redis-config
        livenessProbe:
          tcpSocket:
            port: redis-port
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          exec:
            command:
              - redis-cli
              - ping   name: config
      volumes:
        - name: redis-pv
          emptyDir: {}
        - name: redis-config
          configMap:
            name: redis-configmap
            items:
              - key: redis-config
                path: redis.conf
