app/release.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 3trees-seonglae
  name: threetrees-deploy
  labels:
    run: threetrees
spec:
  replicas: 8
  selector:
    matchLabels:
      app: threetrees
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: threetrees
    spec:
      containers:
        - name: threetrees-container
          image: ghcr.io/3bases/3trees:0.4.1
          ports:
            - containerPort: 1234
          resources:
            limits:
              memory: 3Gi
              cpu: '1'
            requests:
              memory: 3Gi
              cpu: '1'
---
apiVersion: v1
kind: Service
metadata:
  namespace: 3trees-seonglae
  name: threetrees-svc
  annotations:
    dev.okteto.com/auto-ingress: domain
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 1234
      protocol: TCP
  selector:
    app: threetrees
