app/test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  annotations:
    dev.okteto.com/auto-ingress: 'true'
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 1234
      protocol: TCP
  selector:
    app: threetrees-test
