app/test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy
  namespace: 3trees-seonglae
  labels:
    run: threetrees-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: threetrees-test
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: threetrees-test
    spec:
      containers:
        - name: threetrees-container
          image: ghcr.io/3bases/3trees:0.5.0-rc.8
          ports:
            - containerPort: 1234
          resources:
            limits:
              memory: 3Gi
              cpu: '1'
            requests:
              memory: 3Gi
              cpu: '1'

---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: 3trees-seonglae
  annotations:
    dev.okteto.com/auto-ingress: 'true'
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 1234
      protocol: TCP
  selector:
    app: threetrees-test

---
apiVersion: v1
kind: Service
metadata:
  name: www
  namespace: 3trees-seonglae
  annotations:
    dev.okteto.com/auto-ingress: 'true'
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 1234
      protocol: TCP
  selector:
    app: threetrees
