app/threetrees-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: threetrees-svc
  annotations:
    dev.okteto.com/auto-ingress: domain
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 1234
      protocol: TCP
  selector:
    app: threetrees
