app/threetrees-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: 'true'
  name: threetrees-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: threetrees-service
              servicePort: 1234
            path: /
